# parcoursup-dataviz

./: .gitignore  README  README.md  README_FR.md  automation_parcoursup.py  pyproject.toml  scraper.py
parcoursup_dataviz/: cli.py  scraper.py  table.py  table_template.html  visualizer.py
