[tool.poetry]
name = "parcoursup-dataviz"
version = "0.1.0"
description = ""
authors = ["Ewen Le Bihan <ewen.lebihan7@gmail.com>"]

[tool.poetry.scripts]
parcoursup-dataviz = "parcoursup_dataviz.cli:run"

[tool.poetry.dependencies]
python = "^3.6"
helium = "^3.0.4"
beautifulsoup4 = "^4.9.1"
pastel = "^0.2.0"
python-dotenv = "^0.13.0"
lxml = "^4.5.1"
docopt = "^0.6.2"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]
rope = "^0.17.0"
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
